--- a/Documents/ML_PROJECTS/CUSTOMER_PERSONALITY_ANALYSIS/Customer Personality Analysis.ipynb
+++ b/Documents/ML_PROJECTS/CUSTOMER_PERSONALITY_ANALYSIS/Customer Personality Analysis.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "432db32a",
+   "id": "1db32798",
    "metadata": {},
    "source": [
     "* FILLING WITH MEAN"
@@ -1355,7 +1355,7 @@
    "id": "b853d672",
    "metadata": {},
    "source": [
-    "Creating extra features like total money spent, family size"
+    "* Creating extra features like total money spent, family size"
    ]
   },
   {
